test/ui/tests/fail/missing-class-default.rs
struct Point {
    x: i32,
    y: i32,
}

#[neon::class]
impl Point {
}

fn main() {}
